--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
     "name": "@kobayami/math-utils",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "Some little math helper functions",
-    "main": "index.js",
+    "main": "lib/index.js",
     "scripts": {
-        "clean": "rm -rf docs lib",
+        "clean": "rm -rf docs lib test",
         "format": "prettier --write \"src/**/*.ts\" \"spec/**/*.ts\"",
-        "build": "tsc",
-        "lint": "tslint -p tsconfig.json",
-        "test": "ts-node ./node_modules/jasmine/bin/jasmine --config=jasmine.json",
-        "doc": "typedoc",
+        "build": "npm run build-main && npm run build-test",
+        "build-main": "tsc -p tsconfig.src.json",
+        "build-test": "tsc -p tsconfig.test.json",
+        "lint": "tslint -p tsconfig.src.json",
+        "test": "jasmine --config=jasmine.json",
+        "doc": "typedoc --tsconfig tsconfig.src.json",
         "full-build": "npm run clean && npm run format && npm run build && npm run lint && npm run test && npm run doc",
         "remove-node_modules": "rm -rf node_modules",
         "purge": "npm run clean && npm run remove-node_modules",
@@ -21,7 +23,8 @@
         "url": "https://github.com/kobayami/math-utils.git"
     },
     "files": [
-        "lib/**/*"
+        "lib/**/*",
+        "spec/**/*"
     ],
     "keywords": [
         "math",
@@ -29,7 +32,9 @@
         "div",
         "mod",
         "clamp",
-        "lerp"
+        "lerp",
+        "round",
+        "log"
     ],
     "author": "Marco Kaufmann",
     "license": "MIT",
@@ -42,7 +47,6 @@
         "jasmine": "^3.7.0",
         "jasmine-console-reporter": "^3.1.0",
         "prettier": "^2.2.1",
-        "ts-node": "^9.1.1",
         "tslint": "^6.1.3",
         "tslint-config-prettier": "^1.18.0",
         "typedoc": "^0.20.36",
