--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kobayami/math-utils",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "description": "Some little math helper functions",
     "main": "lib/index.js",
     "scripts": {
@@ -24,7 +24,8 @@
     },
     "files": [
         "lib/**/*",
-        "spec/**/*"
+        "test/**/*",
+        "jasmine.json"
     ],
     "keywords": [
         "math",
