--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -1,7 +1,8 @@
 {
     "extends": "./tsconfig",
     "compilerOptions": {
-        "outDir": "./lib"
+        "outDir": "./lib",
+        "declaration": true
     },
     "exclude": [
         "./spec"
